public/js/components/SourceTabs.css
.source-tabs {
  height: 40px;
  width: 100%;
  border-bottom: 1px solid var(--theme-gray);
}

.source-tab {
  border: 1px solid var(--theme-gray);
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  padding: 5px 20px 5px 10px;
  height: 30px;
  line-height: 20px;
  color: var(--theme-comment);
  font-size: 0.7em;
  margin: 10px 0 0 10px;
  display: inline-block;
  border-bottom: none;
  position: relative;
}

.source-tab .close-btn {
  position: absolute;
  right: 7px;
  top: 4px;
}

